logs/Slang/generated/keywords/5.6.2--keyword_import.sv.log
name: keyword_import
description: The 'import' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_import.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_import.sv:8:8: error: expected declarator
    bit import;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_import.sv:8:15: error: expected package import
    bit import;
              ^
